feat:create main and aside sections

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <h2>Colocando o pé na porta!! #Vapo 😶</h2>
         <p>Hello, World!</p>
     </header>
-</body>
 
+    <div id="principal">
+        <main></main>
+        <aside></aside>
+    </div>
+</body>
 </html>
