feat: add profile image

--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
 
 <body>
     <header>
-        <h2>Colocando o pé na porta!! #Vapo 😶</h2>
-        <p>Hello, World!</p>
+        <div id="profile">
+            <img id="image-profile" src="https://github.com/LuizGabrielLopes.png" alt="Quadrado branco com diversos retângulos rosa dentro" />
+        </div>
+        <div>
+            <h2>Colocando o pé na porta!! #Vapo 😶</h2>
+            <p>Hello, World!</p>
+        </div>
     </header>
 
     <div id="principal">
         <main></main>
         <aside></aside>
     </div>
+
+    <footer>
+        <p>Desenvolvido pelo dev <a target="_blank" href="https://github.com/LuizGabrielLopes">Luiz Gabriel</a></p>
+    </footer>
 </body>
 </html>
